fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -291,7 +291,7 @@ a{
 @media (max-width: 796px)
 {
   .project-sc {
-    margin-top: 65px;
+    margin-top: 80px;
   }
   
 }
